// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarFavicon should match the snapshot 1`] = `
<AvatarBase
  size="48"
  style={
    Object {
      "borderRadius": 0,
    }
  }
>
  <Image
    onError={[Function]}
    resizeMode="contain"
    source={
      Object {
        "uri": "https://uniswap.org/favicon.ico",
      }
    }
    style={
      Object {
        "flex": 1,
        "height": undefined,
        "width": undefined,
      }
    }
    testID="favicon-avatar-image"
  />
</AvatarBase>
`;

exports[`AvatarFavicon should render SVG 1`] = `
<AvatarBase
  size="48"
  style={
    Object {
      "borderRadius": 0,
    }
  }
>
  <SvgUri
    height="100%"
    onError={[Function]}
    style={
      Object {
        "flex": 1,
        "height": undefined,
        "width": undefined,
      }
    }
    testID="favicon-avatar-image"
    uri="https://metamask.github.io/test-dapp/metamask-fox.svg"
    width="100%"
  />
</AvatarBase>
`;

exports[`AvatarFavicon should render fallback when svg has error 1`] = `
<AvatarBase
  size="48"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F2F4F6",
      "justifyContent": "center",
    }
  }
>
  <Icon
    name="Global"
    size="32"
  />
</AvatarBase>
`;
